--- a/Site/styleOji.css
+++ b/Site/styleOji.css
@@ -35,9 +35,9 @@
 	position: relative;
 	width: 98px;
 	height: 100px;
-	padding: 10px;
+	/*padding: 10px;
 	margin-top: 50px;
-	margin-left: 18px;
+	margin-left: 18px;*/
 	background: url(images/yey.png) no-repeat 50% 50%;
 	z-index: 4;
 	transition:0.1s;
