--- a/Java script/Noughts and crosses/style.css
+++ b/Java script/Noughts and crosses/style.css
@@ -25,13 +25,13 @@ body{
 	text-align: center;
 	padding-top: 15px;
 }
-.move,.restart{
+.move,.restartButton{
 	width: 200px;
 	height: 20px;
 	text-align: center;
 	margin: 20px auto;
 }
-.restart{
+.restartButton{
 	width: 100px;
 	margin-left: 45%;
 }
