--- a/Java script/World Time/style.css
+++ b/Java script/World Time/style.css
@@ -5,62 +5,59 @@
 	padding: 0;
 	box-sizing: border-box;
 }
-body {
+body{
 	width: 100%;
 	height: 100%;
-    background: #f5f6f6; /* Old browsers */
-    background: -moz-linear-gradient(top, #f5f6f6 0%, #dbdce2 21%, #b8bac6 49%, #dddfe3 80%, #f5f6f6 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #f5f6f6 0%,#dbdce2 21%,#b8bac6 49%,#dddfe3 80%,#f5f6f6 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #f5f6f6 0%,#dbdce2 21%,#b8bac6 49%,#dddfe3 80%,#f5f6f6 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f6f6', endColorstr='#f5f6f6',GradientType=0 ); /* IE6-9 */
-    background-size: cover;
-    position: absolute;
+  background: #f5f6f6; 
+  background: -moz-linear-gradient(top, #f5f6f6 0%, #dbdce2 21%, #b8bac6 49%, #dddfe3 80%, #f5f6f6 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #f5f6f6 0%,#dbdce2 21%,#b8bac6 49%,#dddfe3 80%,#f5f6f6 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #f5f6f6 0%,#dbdce2 21%,#b8bac6 49%,#dddfe3 80%,#f5f6f6 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f6f6', endColorstr='#f5f6f6',GradientType=0 ); /* IE6-9 */
+  background-size: cover;
+  position: absolute;
 }
- #block {
+#block{
  	display: block;
  	width: 940px;
  	height: 350px;
-    margin: 100px auto;   
+  margin: 100px auto;   
  }
-
- #polosa {
+#polosa{
  	display: inline-block;
  	position: relative;
  	width: 940px;
  	height: 350px; 
-    left: 0;
- }
- #london,#tokyo,#newYork,#moscow {
+  left: 0;
+}
+#London,#Belarus,#NewYork,#Moscow{
   width: 235px;
   height: 350px; 
   float: left;
   background: url(images/london.png);
   background-size: cover;
- }
- #tokyo {
+}
+#Belarus{
   background: url(images/belarus.png);
   background-size: cover;
- }
- #newYork {
+}
+#NewYork{
   background: url(images/NewYork.png);
   background-size: cover;
- }
- #moscow {
+}
+#Moscow{
   background: url(images/moscow.png);
   background-size: cover;
- }
-  #screen1,#screen2,#screen3,#screen4 {
-    display: block;
-    /*border: 1px solid black;*/
-    width: 172px;
-    height: 172px;
-    position: absolute;
-    margin-top: 40px;
-    margin-left: 35px;
-  }
-  #hour,#min,#sec,#hour1,#min1,#sec1,#hour2,#min2,#sec2,#hour3,#min3,#sec3 {
-    display: block;
-    position: absolute;
-
-  }
+}
+#screenLondon,#screenBelarus,#screenNewYork,#screenMoskow{
+  display: block;
+  width: 172px;
+  height: 172px;
+  position: absolute;
+  margin-top: 40px;
+  margin-left: 35px;
+}
+.hour,.min,.sec{
+  display: block;
+  position: absolute;
+}
   
