--- a/Layouts/Sravni/index.html
+++ b/Layouts/Sravni/index.html
@@ -8,28 +8,8 @@
     <link rel="stylesheet" type="text/css" href="dist/style.css">
   </head>
   <body>
- 	<!-- <section class="container-fluid rd-main__container">		
-	 	<div class="row rd-table">
-	 		<div class="col-xl-9 col-lg-10 col-md-12 rd-table__container">
-
-	 			<div class="row rd-table__renderBlock">
-	 				<div class="col-12">
-	 					<div class="row">
-	 						<div class="col-12"></div>
-	 					</div>
-	 					<div class="row">
-	 						<div class="col-6">ааа</div>
-	 						<div class="col-6">аа</div>
-	 					</div>
-	 				</div>
-	 			</div>
-
-	 		</div>
-	 	</div>
- 	</section> -->
  	<div class="rd-mainContainer">		
 	 	<div class="rd-tableContainer">
-
 	 		<section class="rd-tableRenderBlock">
 	 			<h1  class="rd-tableRenderBlock__title">Микрозаймы</h1>
 	 			<div class="rd-tableRenderBlock__render">
@@ -52,20 +32,9 @@
 	 					</div>
 	 			    </div>
 	 			</div>
-	 			<div class="rd-tableRenderBlock__render--additional">
-	 			    <div class="rd-additionalConditions">Дополнительные условия </div>
-	 			</div>
 	 		</section>             
             <section class="rd-selection">
-
-	            <div class="rd-selectForm">
-	            	<label class="rd-selectForm__label">Сортировать:</label>
-				    <select class="rd-selectForm__select">
-				        <option value="1">по процентной ставке</option>
-				        <option value="2">по названию компании</option>
-				    </select>
-	            </div>
-
+	            <div class="rd-selection__header">Можно вставить текст, чтобы шапка была</div>
 	            <div class="rd-selectedItem">
 	            	<div class="rd-selectedItem__wrap">
                        <span class="rd-selectedItem__wrap--ribbon6">Рекомендуем</span>
@@ -80,24 +49,187 @@
 	            			<div class="rd-description__counter--rate">0,08 % в день</div>
 	            			<div class="rd-description__counter--amount">3 0000 - 1 000 000 &#8381;</div>
 	            			<div class="rd-description__counter--term">70 - 1 825 дней</div>
+	            			<a href="#" target="_blank" class="rd-selectedItem__button">
+			            		<button class="rd-selectedItem__button--select">Перейти</button>
+			            	</a>
+	            		</div>
+	            		<div class="rd-details">
+	            			<hr class="rd-details__hr">
+                            <div class="rd-details__textBlock">
+                            	<div class="rd-details__textBlock--shownBlock">
+                            		<p>Возраст заемщика: от 21 года</p>
+                            		<div class="rd-buttonWraper">
+                        			    <p>Получение займа: банковская карта, платёжные системы, банковский счет
+                        	            </p>
+		                                <button class="rd-details__textBlock--buttonHidden">Показать</button>  
+                            		</div>                          	   
+                            	</div>
+                                <div class="rd-details__textBlock--hiddenBlock">
+                                	<p>Погашение: раз в две недели</p>
+	                                <p>Пролонгация</p>
+	                                <p>Отсрочка</p>
+	                                <p>Штрафы</p>
+	                                <p>Место заключения договора: онлайн, в офисе</p>
+	                                <a href="#" class="rd-details-learnMore">Подробно</a>  
+                                </div>          
+                            </div>
 	            		</div>
 	            	</div>
-	            	<a href="#" target="_blank" class="rd-selectedItem__button">
-	            		<button class="rd-selectedItem__button--select">Перейти</button>
-	            	</a>
 	            </div>
-
-  
-
+	            <div class="rd-selectedItem">
+	            	<div class="rd-selectedItem__wrap">
+                       <span class="rd-selectedItem__wrap--ribbon6">Рекомендуем</span>
+                    </div>
+	            	<div class="rd-selectedItem__logo">
+	            		<img class="rd-selectedItem__logo--img" src="dist/images/btb.png" alt="ВТБ" title="ВТБ">
+	            	</div>
+	            	<div class="rd-description">
+	            		<h3 class="rd-description__offerName">- &#171;Потребительский&#187;</h3>
+	            		<h2 class="rd-description__officeName">ВТБ</h2>
+	            		<div class="rd-description__counter">
+	            			<div class="rd-description__counter--rate">0,20 % в день</div>
+	            			<div class="rd-description__counter--amount">1 100 - 1 000 000 &#8381;</div>
+	            			<div class="rd-description__counter--term">7 - 365 дней</div>
+	            			<a href="#" target="_blank" class="rd-selectedItem__button">
+			            		<button class="rd-selectedItem__button--select">Перейти</button>
+			            	</a>
+	            		</div>
+	            		<div class="rd-details">
+	            			<hr class="rd-details__hr">
+                            <div class="rd-details__textBlock">
+                            	<div class="rd-details__textBlock--shownBlock">
+                            		<p>Возраст заемщика: от 18 лет</p>
+                            		<div class="rd-buttonWraper">
+                        			    <p>Получение займа: наличные, банковская карта, банковский счет</p>
+		                                <button class="rd-details__textBlock--buttonHidden">Показать</button>  
+                            		</div>                          	   
+                            	</div>
+                                <div class="rd-details__textBlock--hiddenBlock">
+                                	<p>Погашение: ежемесячно или в конце срока</p>
+	                                <p>Пролонгация</p>
+	                                <p>Отсрочка</p>
+	                                <p>Штрафы</p>
+	                                <p>Место заключения договора: онлайн, в офисе</p>
+	                                <a href="#" class="rd-details-learnMore">Подробно</a>  
+                                </div>          
+                            </div>
+	            		</div>
+	            	</div>
+	            </div>
+	            <div class="rd-selectedItem">
+	            	<div class="rd-selectedItem__logo">
+	            		<img class="rd-selectedItem__logo--img" src="dist/images/idea.png" alt="Идея Банк" title="Идея Банк">
+	            	</div>
+	            	<div class="rd-description">
+	            		<h3 class="rd-description__offerName">- &#171;Стандарт&#187;</h3>
+	            		<h2 class="rd-description__officeName">Идея банк</h2>
+	            		<div class="rd-description__counter">
+	            			<div class="rd-description__counter--rate">0,55 % в день</div>
+	            			<div class="rd-description__counter--amount">1 000 - 40 000 &#8381;</div>
+	            			<div class="rd-description__counter--term">7 - 365 дней</div>
+	            			<a href="#" target="_blank" class="rd-selectedItem__button">
+			            		<button class="rd-selectedItem__button--select">Перейти</button>
+			            	</a>
+	            		</div>
+	            		<div class="rd-details">
+	            			<hr class="rd-details__hr">
+                            <div class="rd-details__textBlock">
+                            	<div class="rd-details__textBlock--shownBlock">
+                            		<p>Возраст заемщика: от 18 лет</p>
+                            		<div class="rd-buttonWraper">
+                        			    <p>Получение займа: наличные, банковская карта, банковский счет</p>
+		                                <button class="rd-details__textBlock--buttonHidden">Показать</button>  
+                            		</div>                          	   
+                            	</div>
+                                <div class="rd-details__textBlock--hiddenBlock">
+                                	<p>Погашение: ежемесячно или в конце срока</p>
+	                                <p>Пролонгация</p>
+	                                <p>Отсрочка</p>
+	                                <p>Штрафы</p>
+	                                <p>Место заключения договора: онлайн, в офисе</p>
+	                                <a href="#" class="rd-details-learnMore">Подробно</a>  
+                                </div>          
+                            </div>
+	            		</div>
+	            	</div>
+	            </div>
+	            <div class="rd-selectedItem">
+	            	<div class="rd-selectedItem__logo">
+	            		<img class="rd-selectedItem__logo--img" src="dist/images/alfa.png" alt="Альфа Банк" title="Альфа Банк">
+	            	</div>
+	            	<div class="rd-description">
+	            		<h3 class="rd-description__offerName">- &#171;Потребительский&#187;</h3>
+	            		<h2 class="rd-description__officeName">Альфа Банк</h2>
+	            		<div class="rd-description__counter">
+	            			<div class="rd-description__counter--rate">0,00 % в день</div>
+	            			<div class="rd-description__counter--amount">1 000 - 30 000 &#8381;</div>
+	            			<div class="rd-description__counter--term">1 - 365 дней</div>
+	            			<a href="#" target="_blank" class="rd-selectedItem__button">
+			            		<button class="rd-selectedItem__button--select">Перейти</button>
+			            	</a>
+	            		</div>
+	            		<div class="rd-details">
+	            			<hr class="rd-details__hr">
+                            <div class="rd-details__textBlock">
+                            	<div class="rd-details__textBlock--shownBlock">
+                            		<p>Возраст заемщика: от 18 лет</p>
+                            		<div class="rd-buttonWraper">
+                        			    <p>Получение займа: наличные, банковская карта, банковский счет</p>
+		                                <button class="rd-details__textBlock--buttonHidden">Показать</button>  
+                            		</div>                          	   
+                            	</div>
+                                <div class="rd-details__textBlock--hiddenBlock">
+                                	<p>Погашение: ежемесячно или в конце срока</p>
+	                                <p>Пролонгация</p>
+	                                <p>Отсрочка</p>
+	                                <p>Штрафы</p>
+	                                <p>Место заключения договора: онлайн, в офисе</p>
+	                                <a href="#" class="rd-details-learnMore">Подробно</a>  
+                                </div>          
+                            </div>
+	            		</div>
+	            	</div>
+	            </div>
+	            <div class="rd-selectedItem">
+	            	<div class="rd-selectedItem__logo">
+	            		<img class="rd-selectedItem__logo--img" src="dist/images/bta.png" alt="БТА Банк" title="БТА Банк">
+	            	</div>
+	            	<div class="rd-description">
+	            		<h3 class="rd-description__offerName">- &#171;Потребительский&#187;</h3>
+	            		<h2 class="rd-description__officeName">БТА Банк</h2>
+	            		<div class="rd-description__counter">
+	            			<div class="rd-description__counter--rate">0,08 % в день</div>
+	            			<div class="rd-description__counter--amount">1 000 - 15 000 &#8381;</div>
+	            			<div class="rd-description__counter--term">60 - 365 дней</div>
+	            			<a href="#" target="_blank" class="rd-selectedItem__button">
+			            		<button class="rd-selectedItem__button--select">Перейти</button>
+			            	</a>
+	            		</div>
+	            		<div class="rd-details">
+	            			<hr class="rd-details__hr">
+                            <div class="rd-details__textBlock">
+                            	<div class="rd-details__textBlock--shownBlock">
+                            		<p>Возраст заемщика: от 18 лет</p>
+                            		<div class="rd-buttonWraper">
+                        			    <p>Получение займа: наличные, банковская карта, банковский счет</p>
+		                                <button class="rd-details__textBlock--buttonHidden">Показать</button>  
+                            		</div>                          	   
+                            	</div>
+                                <div class="rd-details__textBlock--hiddenBlock">
+                                	<p>Погашение: ежемесячно или в конце срока</p>
+	                                <p>Пролонгация</p>
+	                                <p>Отсрочка</p>
+	                                <p>Штрафы</p>
+	                                <p>Место заключения договора: онлайн, в офисе</p>
+	                                <a href="#" class="rd-details-learnMore">Подробно</a>  
+                                </div>          
+                            </div>
+	            		</div>
+	            	</div>
+	            </div>
 	        </section>
- 
-
 	 	</div> 			
  	</div>
-
-
-
-
     <script type="text/javascript" src="dist/main.js"></script>  	
   </body>
 </html>
