--- a/Layouts/Sravni/index.html
+++ b/Layouts/Sravni/index.html
@@ -285,6 +285,6 @@
 	        </section>
 	 	</div> 			
  	</div>
-    <script type="text/javascript" src="dist/main.js" defer></script>  	
+    <script type="text/javascript" src="dist/main.js"></script>  	
   </body>
 </html>
