--- a/Layouts/Calculator/index.html
+++ b/Layouts/Calculator/index.html
@@ -16,15 +16,15 @@
  			<div class ="cl-calculatorWrapper-inputs">
  				<div class="cl-calculatorWrapper-inputs__inputBlock">
  					<p class="cl-calculatorWrapper-inputs__nameOfInput">Сумма займа в рублях</p>
- 					<input id = "cl-calculatorWrapper-input__1" type="text" class="cl-calculatorWrapper-inputs__input" size="20" name ="amount" maxlength="6">
+ 					<input id = "cl-calculatorWrapper-input__1" type="text" class="cl-calculatorWrapper-inputs__input" size="20" name ="amount" maxlength="6" autocomplete="off">
  				</div>
  				<div class="cl-calculatorWrapper-inputs__inputBlock">
  					<p class="cl-calculatorWrapper-inputs__nameOfInput">Срок в днях</p>
- 					<input type="text" id = "cl-calculatorWrapper-input__2" name="term" class="cl-calculatorWrapper-inputs__input" size="20" maxlength="3">
+ 					<input type="text" id = "cl-calculatorWrapper-input__2" name="term" class="cl-calculatorWrapper-inputs__input" size="20" maxlength="3" autocomplete="off">
  				</div>
  			    <div class="cl-calculatorWrapper-inputs__inputBlock">
  					<p class="cl-calculatorWrapper-inputs__nameOfInput">Процент в день</p>
- 					<input type="text" id = "cl-calculatorWrapper-input__3" name="percent" class="cl-calculatorWrapper-inputs__input" size="20" maxlength="10">
+ 					<input type="text" id = "cl-calculatorWrapper-input__3" name="percent" class="cl-calculatorWrapper-inputs__input" size="20" maxlength="10" autocomplete="off">
  				</div>						    
  			       <button class="cl-calculatorWrapper-inputs__button" >Рассчитать</button>			   
  			</div>
